syntax = "proto3";

package io.kx.loanapp.action;

import "google/api/annotations.proto";
import "google/protobuf/any.proto";
import "google/protobuf/empty.proto";
import "kalix/annotations.proto";

import "io/kx/loanapp/api/loan_app_api.proto";

option java_outer_classname = "LoanAppActionHandler";

service LoanAppServiceAction {

  option (kalix.codegen) = {
    action: {}
  };

  rpc SubmitLoanApplication(api.SubmitCommand) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/loanapp/create",
      body: "*"
    };
  }
  rpc ApproveLoanApplication(api.ApproveCommand) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/loanapp/approve",
      body: "*"
    };
  }
  rpc ExpireAction(api.DeclineCommand) returns (google.protobuf.Empty){
    option (google.api.http) = {
      post: "/loanapp/expire",
      body: "*"
    };
  }
}